<resources>
    <string name="app_name">Shahrozada 1</string>
    <string name="btu_name">HC-06</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="about">About</string>
    <string name="enter_time">Enter the polling time,msec</string>
    <string name="settings">Settings</string>
    <string name="device_name">Enter the device name</string>
    <string name="not_btu">Bluetooth not present</string>
    <string name="delete">Delete</string>
    <string name="delete_complete">Delete complete</string>
    <string name="empty_ls">The list is empty</string>
    <string name="sensor_alarm">Sensor state alarm or damage</string>
    <string name="sensor_normal">Normal sensor state</string>
    <string name="sensor_deactivate">Inactive sensor signal</string>
    <string name="con_state">Connection is active</string>
    <string name="discon_state">Connection is not active</string>
    <string name="forward_sensor_ppm">Forward sensor  РРМ</string>
    <string name="board_sensor_ppm">Board sensor  РРМ</string>
    <string name="backward_sensor_ppm">Backward sensor  РРМ</string>
    <string name="forward_sensor_damage">Forward sensor damage</string>
    <string name="board_sensor_damage">Board sensor damage</string>
    <string name="backward_sensor_damage">Backward sensor damage</string>
    <string name="forward_sensor_status">Forward sensor status</string>
    <string name="board_sensor_status">Board sensor status</string>
    <string name="backward_sensor_status">Board sensor status</string>
    <string name="con_status">Connection status</string>
    <string name="connect">Connect</string>
    <string name="main_name">Main menu</string>
    <string-array name="itemname">
        <item>Process</item>
        <item>Settings</item>
        <item>Help</item>
        <item>About</item>
        <item>Errors</item>
        <item>Enter device name</item>
    </string-array>
    <string-array name="subitemname">
        <item>Running the process</item>
        <item>Changing settings</item>
        <item>Read the help</item>
        <item>All about the program</item>
        <item>Look at the mistakes</item>
        <item>Enter the device name</item>
    </string-array>
    <string name="title_activity_errors">errorsActivity</string>
    <string name="about_text_name">
        Programm Shahrozada 1.\n
        Released 15.05.2018\n.
        Version 1.0\n
        All rights reserved.\n
    </string>
    <string name="help_text_name">
        The <font color="red" face="Arial" size="17">"Settings"</font>
        menu requires set an application poll time devices.
        In the <font color="red" face="Arial" size="17">"Errors"</font> menu,
        you can view the list of errors, and also delete them.
        In the menu <font color="red" face="Arial" size="17">" Input device"</font> You must enter the name
        of the bluetooth devices on the controller.
     </string>
    <string name="connect_btu">Connect</string>
    <string name="disconnect_btu">Disconnect</string>
    <string name="scan_btn">SCAN FOR DEVICES</string>

    <string-array name="sensor_err_message">
        <item>Board sensor failure</item>
        <item>Forward sensor failure</item>
        <item>Back sensor failure</item>
        <item>Board sensor damage</item>
        <item>Forward sensor damage</item>
        <item>Back sensor damage</item>
    </string-array>
    <string name="notification_title">GAS ALARM</string>
    <string name="notification_text">Click to view alarm</string>
    <string name="btu_en_text">Wait a little bluetooth turns on</string>
    <string name="btu_no_found">No devices found</string>
    <string name="bluetooth_devices">Bluetooth devices</string>
    <string name="scanning">Scanning</string>
    <string name="scan_for_devices">Search</string>
    <string name="select_device">Select</string>
    <string name="no_devices_found">No device</string>



</resources>
