<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layoutDirection="locale">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="3dp">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/process_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_columnSpan="2"
                    android:background="#353238"
                    android:elevation="4dp"
                    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                    android:titleTextColor="@android:color/white"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    android:layoutDirection="locale"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="235dp"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_margin="10dp"
                    android:layout_marginStart="10dp"
                    android:padding="5dp"
                    android:paddingStart="10dp"
                    android:text="@string/forward_sensor_ppm"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="@color/white"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />

                <TextView
                    android:id="@+id/ForwardSensorPPM"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="20dp"
                    android:background="@android:color/transparent"
                    android:text="0"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="235dp"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:layout_margin="10dp"
                    android:layout_marginStart="10dp"
                    android:padding="5dp"
                    android:paddingStart="10dp"
                    android:text="@string/board_sensor_ppm"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="@color/white"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />

                <TextView
                    android:id="@+id/BoardSensorPPM"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="20dp"
                    android:background="@android:color/transparent"
                    android:text="0"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="235dp"
                    android:layout_height="wrap_content"
                    android:layout_row="3"
                    android:layout_column="0"
                    android:layout_margin="10dp"
                    android:layout_marginStart="10dp"
                    android:padding="5dp"
                    android:paddingStart="10dp"
                    android:text="@string/backward_sensor_ppm"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />

                <TextView
                    android:id="@+id/BackwardSensorPPM"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_row="3"
                    android:layout_column="1"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="20dp"
                    android:background="@android:color/transparent"
                    android:text="0"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="235dp"
                    android:layout_height="wrap_content"
                    android:layout_row="4"
                    android:layout_column="0"
                    android:layout_margin="10dp"
                    android:layout_marginStart="10dp"
                    android:padding="5dp"
                    android:paddingStart="10dp"
                    android:text="@string/forward_sensor_damage"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />

                <ImageView
                    android:id="@+id/ForwardSensorR0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="4"
                    android:layout_column="1"
                    android:layout_margin="5dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="20dp"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:scaleX="0.9"
                    android:scaleY="0.9"
                    app:srcCompat="@mipmap/off"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="235dp"
                    android:layout_height="wrap_content"
                    android:layout_row="5"
                    android:layout_column="0"
                    android:layout_margin="10dp"
                    android:layout_marginStart="10dp"
                    android:padding="5dp"
                    android:paddingStart="10dp"
                    android:text="@string/board_sensor_damage"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="@color/white"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />

                <ImageView
                    android:id="@+id/BoardSensorR0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="5"
                    android:layout_column="1"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="20dp"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:scaleX="0.9"
                    android:scaleY="0.9"
                    app:srcCompat="@mipmap/off"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="235dp"
                    android:layout_height="wrap_content"
                    android:layout_row="6"
                    android:layout_column="0"
                    android:layout_margin="10dp"
                    android:layout_marginStart="10dp"
                    android:padding="5dp"
                    android:paddingStart="10dp"
                    android:text="@string/backward_sensor_damage"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="@color/white"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />

                <ImageView
                    android:id="@+id/BackwardSensorR0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="6"
                    android:layout_column="1"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="20dp"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:scaleX="0.9"
                    android:scaleY="0.9"
                    app:srcCompat="@mipmap/off"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="235dp"
                    android:layout_height="wrap_content"
                    android:layout_row="7"
                    android:layout_column="0"
                    android:layout_margin="10dp"
                    android:layout_marginStart="10dp"
                    android:padding="5dp"
                    android:paddingStart="10dp"
                    android:text="@string/forward_sensor_status"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="@color/white"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />

                <ImageView
                    android:id="@+id/ForwardSensorAlarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="7"
                    android:layout_column="1"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="20dp"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:scaleX="0.9"
                    android:scaleY="0.9"
                    app:srcCompat="@mipmap/off"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="235dp"
                    android:layout_height="wrap_content"
                    android:layout_row="8"
                    android:layout_column="0"
                    android:layout_margin="10dp"
                    android:layout_marginStart="10dp"
                    android:padding="5dp"
                    android:paddingBottom="10dp"
                    android:text="@string/board_sensor_status"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="@color/white"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />

                <ImageView
                    android:id="@+id/BoardSensorAlarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="8"
                    android:layout_column="1"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="20dp"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:scaleX="0.9"
                    android:scaleY="0.9"
                    app:srcCompat="@mipmap/off"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="235dp"
                    android:layout_height="wrap_content"
                    android:layout_row="9"
                    android:layout_column="0"
                    android:layout_margin="10dp"
                    android:layout_marginStart="10dp"
                    android:padding="5dp"
                    android:paddingStart="10dp"
                    android:text="@string/backward_sensor_status"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="@color/white"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />

                <ImageView
                    android:id="@+id/BackwardSensorAlarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="9"
                    android:layout_column="1"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="20dp"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:scaleX="0.9"
                    android:scaleY="0.9"
                    app:srcCompat="@mipmap/off"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="235dp"
                    android:layout_height="wrap_content"
                    android:layout_row="10"
                    android:layout_column="0"
                    android:layout_margin="10dp"
                    android:layout_marginStart="10dp"
                    android:padding="5dp"
                    android:paddingStart="10dp"
                    android:text="@string/con_status"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="@color/white"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />

                <ImageView
                    android:id="@+id/ConnectonStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="10"
                    android:layout_column="1"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="20dp"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:scaleX="0.9"
                    android:scaleY="0.9"
                    app:srcCompat="@mipmap/btu_dis"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />


        </GridLayout>
</ScrollView>
